# AACI

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FINE_TUNING_GUIDE.md  README.md  SETUP.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements - cópia.txt  requirements.txt  tsconfig.json  wrangler.jsonc
aaci/: __init__.py  __main__.py  ambient_agents.py  api_schemas.py  config.py  realtime_transcription.py
aaci/finetuning/: __init__.py
aaci/medical_vocabulary/: __init__.py
aaci/utils/: __init__.py
aaci/workers/: __init__.py
container_src/: app.py  requirements.txt
scripts/: download_model.sh  prepare_dataset.py  test_worker.py
src/: index.ts
