[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaci"
version = "0.1.0"
description = "Ambient-Agentic Clinical Intelligence for Voither HealthOS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Voither Health"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "openai-whisper>=20231117",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.1",
    "jiwer>=3.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "spacy>=3.7.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
aaci-worker = "aaci.workers:main"
aaci-finetune = "aaci.finetuning:main"

[tool.setuptools]
packages = ["aaci", "aaci.medical_vocabulary", "aaci.finetuning", "aaci.workers", "aaci.utils"]
